monticore-generator/src/test/resources/cocos/invalid/A4016/A4016.mc4
package cocos.invalid.A4016;

grammar A4016 {

  token A = B;

}